# Task-Api-Assignment

./: .gitignore  Dockerfile  README.md  assignment2_answer.txt  docker-compose.yml  init_db.py  pyproject.toml
api/: main.py
api/crud/: __init__.py  task.py
api/db/: database.py  entities.py  task_datasource.py
api/models/: status.py  task.py
api/routers/: task_router.py
api/schemas/: __init__.py  task.py
